[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Danya <fsb2004pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anyio = "3.6.2"
bcrypt = "4.0.1"
click = "8.1.3"
colorama = "0.4.6"
fastapi = "0.95.1"
greenlet = "2.0.2"
h11 = "0.14.0"
idna = "3.4"
passlib = "1.7.4"
pydantic = "1.10.7"
sniffio = "1.3.0"
starlette = "0.26.1"
typing-extensions = "4.5.0"
uvicorn = "0.22.0"
pytest = "^7.3.1"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.27.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
